--- a/tennis-dashboard/package.json
+++ b/tennis-dashboard/package.json
@@ -9,6 +9,9 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "engines": {
+    "node": ">=20.9.0"
+  },
   "dependencies": {
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
